4.x: Cleanup: Serial annotation, getFirst usage