@@ -118,7 +118,7 @@ public class MaybeConsumersTest implements Consumer<Object>, Action {
 
         processor.onError(new IOException());
 
-        assertTrue(events.toString(), events.get(0) instanceof IOException);
+        assertTrue(events.toString(), events.getFirst() instanceof IOException);
 
         assertEquals(0, composite.size());
     }
@@ -151,7 +151,7 @@ public class MaybeConsumersTest implements Consumer<Object>, Action {
 
         processor.onError(new IOException());
 
-        assertTrue(events.toString(), events.get(0) instanceof IOException);
+        assertTrue(events.toString(), events.getFirst() instanceof IOException);
 
         assertEquals(0, composite.size());
     }
@@ -208,7 +208,7 @@ public class MaybeConsumersTest implements Consumer<Object>, Action {
             assertTrue(events.toString(), events.isEmpty());
 
             TestHelper.assertError(errors, 0, CompositeException.class);
-            List<Throwable> inners = TestHelper.compositeList(errors.get(0));
+            List<Throwable> inners = TestHelper.compositeList(errors.getFirst());
             TestHelper.assertError(inners, 0, IllegalArgumentException.class);
             TestHelper.assertError(inners, 1, IOException.class);
         } finally {
