@@ -190,7 +190,7 @@ public class FlowablePublishFunctionTest extends RxJavaTest {
         ts.assertNotComplete();
 
         Assert.assertEquals(MissingBackpressureException.DEFAULT_MESSAGE,
-                ts.errors().get(0).getMessage());
+                ts.errors().getFirst().getMessage());
         Assert.assertFalse("Source has subscribers?", pp.hasSubscribers());
     }
 
@@ -212,7 +212,7 @@ public class FlowablePublishFunctionTest extends RxJavaTest {
         ts.assertError(MissingBackpressureException.class);
         ts.assertNotComplete();
 
-        Assert.assertEquals(MissingBackpressureException.DEFAULT_MESSAGE, ts.errors().get(0).getMessage());
+        Assert.assertEquals(MissingBackpressureException.DEFAULT_MESSAGE, ts.errors().getFirst().getMessage());
         Assert.assertFalse("Source has subscribers?", pp.hasSubscribers());
     }
 
