@@ -100,7 +100,7 @@ public class MaybePeekTest extends RxJavaTest {
 
         to.assertFailure(CompositeException.class);
 
-        List<Throwable> errors = TestHelper.compositeList(to.errors().get(0));
+        List<Throwable> errors = TestHelper.compositeList(to.errors().getFirst());
 
         TestHelper.assertError(errors, 0, TestException.class, "Main");
         TestHelper.assertError(errors, 1, TestException.class, "Inner");
