@@ -117,7 +117,7 @@ public class MaybeUsingTest extends RxJavaTest {
         .to(TestHelper.testConsumer())
         .assertFailure(CompositeException.class);
 
-        List<Throwable> list = TestHelper.compositeList(to.errors().get(0));
+        List<Throwable> list = TestHelper.compositeList(to.errors().getFirst());
 
         TestHelper.assertError(list, 0, TestException.class, "Main");
         TestHelper.assertError(list, 1, TestException.class, "Disposer");
@@ -203,7 +203,7 @@ public class MaybeUsingTest extends RxJavaTest {
         .to(TestHelper.testConsumer())
         .assertFailure(CompositeException.class);
 
-        List<Throwable> list = TestHelper.compositeList(to.errors().get(0));
+        List<Throwable> list = TestHelper.compositeList(to.errors().getFirst());
 
         TestHelper.assertError(list, 0, TestException.class, "Main");
         TestHelper.assertError(list, 1, TestException.class, "Disposer");
