@@ -285,7 +285,7 @@ public class FlowableConcatMapMaybeTest extends RxJavaTest {
         .assertFailure(CompositeException.class)
         ;
 
-        CompositeException ce = (CompositeException)ts.errors().get(0);
+        CompositeException ce = (CompositeException)ts.errors().getFirst();
         assertEquals(5, ce.getExceptions().size());
     }
 
