@@ -252,7 +252,7 @@ public class ObservableConcatMapMaybeTest extends RxJavaTest {
         .assertFailure(CompositeException.class)
         ;
 
-        CompositeException ce = (CompositeException)to.errors().get(0);
+        CompositeException ce = (CompositeException)to.errors().getFirst();
         assertEquals(5, ce.getExceptions().size());
     }
 
