@@ -59,7 +59,7 @@ public class SingleFlatMapNotificationTest extends RxJavaTest {
         .to(TestHelper.<Integer>testConsumer())
         .assertFailure(CompositeException.class);
 
-        List<Throwable> ce = TestHelper.compositeList(to.errors().get(0));
+        List<Throwable> ce = TestHelper.compositeList(to.errors().getFirst());
 
         TestHelper.assertError(ce, 0, TestException.class);
         TestHelper.assertError(ce, 1, NullPointerException.class);
