@@ -415,7 +415,7 @@ public class SafeObserverTest extends RxJavaTest {
             so.onNext(1);
 
             TestHelper.assertError(list, 0, CompositeException.class);
-            List<Throwable> ce = TestHelper.compositeList(list.get(0));
+            List<Throwable> ce = TestHelper.compositeList(list.getFirst());
             TestHelper.assertError(ce, 0, TestException.class, "onNext(1)");
             TestHelper.assertError(ce, 1, TestException.class, "onError(io.reactivex.rxjava4.exceptions.TestException: onNext(1))");
         } finally {
@@ -477,7 +477,7 @@ public class SafeObserverTest extends RxJavaTest {
             so.onSubscribe(cd);
 
             TestHelper.assertError(list, 0, CompositeException.class);
-            List<Throwable> ce = TestHelper.compositeList(list.get(0));
+            List<Throwable> ce = TestHelper.compositeList(list.getFirst());
             TestHelper.assertError(ce, 0, TestException.class, "onSubscribe()");
             TestHelper.assertError(ce, 1, TestException.class, "dispose()");
         } finally {
@@ -497,7 +497,7 @@ public class SafeObserverTest extends RxJavaTest {
             so.onNext(1);
 
             TestHelper.assertError(list, 0, CompositeException.class);
-            List<Throwable> ce = TestHelper.compositeList(list.get(0));
+            List<Throwable> ce = TestHelper.compositeList(list.getFirst());
             TestHelper.assertError(ce, 0, NullPointerException.class, "Subscription not set!");
             TestHelper.assertError(ce, 1, TestException.class, "onSubscribe()");
         } finally {
@@ -529,7 +529,7 @@ public class SafeObserverTest extends RxJavaTest {
             so.onNext(1);
 
             TestHelper.assertError(list, 0, CompositeException.class);
-            List<Throwable> ce = TestHelper.compositeList(list.get(0));
+            List<Throwable> ce = TestHelper.compositeList(list.getFirst());
             TestHelper.assertError(ce, 0, NullPointerException.class, "Subscription not set!");
             TestHelper.assertError(ce, 1, TestException.class, "onError(java.lang.NullPointerException: Subscription not set!)");
         } finally {
@@ -560,7 +560,7 @@ public class SafeObserverTest extends RxJavaTest {
             so.onError(new TestException());
 
             TestHelper.assertError(list, 0, CompositeException.class);
-            List<Throwable> ce = TestHelper.compositeList(list.get(0));
+            List<Throwable> ce = TestHelper.compositeList(list.getFirst());
             TestHelper.assertError(ce, 0, TestException.class);
             TestHelper.assertError(ce, 1, NullPointerException.class, "Subscription not set!");
         } finally {
@@ -580,7 +580,7 @@ public class SafeObserverTest extends RxJavaTest {
             so.onError(new TestException());
 
             TestHelper.assertError(list, 0, CompositeException.class);
-            List<Throwable> ce = TestHelper.compositeList(list.get(0));
+            List<Throwable> ce = TestHelper.compositeList(list.getFirst());
             TestHelper.assertError(ce, 0, TestException.class);
             TestHelper.assertError(ce, 1, NullPointerException.class, "Subscription not set!");
             TestHelper.assertError(ce, 2, TestException.class);
@@ -619,7 +619,7 @@ public class SafeObserverTest extends RxJavaTest {
             so.onComplete();
 
             TestHelper.assertError(list, 0, CompositeException.class);
-            List<Throwable> ce = TestHelper.compositeList(list.get(0));
+            List<Throwable> ce = TestHelper.compositeList(list.getFirst());
             TestHelper.assertError(ce, 0, NullPointerException.class, "Subscription not set!");
             TestHelper.assertError(ce, 1, TestException.class, "onSubscribe()");
         } finally {
@@ -639,7 +639,7 @@ public class SafeObserverTest extends RxJavaTest {
             so.onComplete();
 
             TestHelper.assertError(list, 0, CompositeException.class);
-            List<Throwable> ce = TestHelper.compositeList(list.get(0));
+            List<Throwable> ce = TestHelper.compositeList(list.getFirst());
             TestHelper.assertError(ce, 0, NullPointerException.class, "Subscription not set!");
             TestHelper.assertError(ce, 1, TestException.class);
         } finally {
