@@ -176,7 +176,7 @@ public class ReplaySubjectConcurrencyTest extends RxJavaTest {
             sums.add(v);
         }
 
-        long expected = sums.get(0);
+        long expected = sums.getFirst();
         boolean success = true;
         for (long l : sums) {
             if (l != expected) {
